--- a/package.json
+++ b/package.json
@@ -11,6 +11,22 @@
         "lint": "ng lint",
         "e2e": "ng e2e"
     },
+    "lint-staged": {
+        "*.scss": [
+            "node_modules/.bin/prettier --write --config .prettierrc",
+            "stylelint",
+            "git add"
+        ],
+        "*.ts": [
+            "node_modules/.bin/prettier --write --config .prettierrc",
+            "tslint",
+            "git add"
+        ],
+        "*.html": [
+            "node_modules/.bin/js-beautify -r",
+            "git add"
+        ]
+    },
     "private": true,
     "dependencies": {
         "@angular/common": "~8.2.14",
@@ -48,6 +64,7 @@
         "husky": "^4.2.3",
         "jasmine-core": "~3.4.0",
         "jasmine-spec-reporter": "~4.2.1",
+        "js-beautify": "^1.10.3",
         "karma": "~4.1.0",
         "karma-chrome-launcher": "~2.2.0",
         "karma-coverage-istanbul-reporter": "~2.0.1",
@@ -56,6 +73,9 @@
         "lint-staged": "^10.0.8",
         "prettier": "^1.19.1",
         "protractor": "~5.4.0",
+        "stylelint": "^13.2.1",
+        "stylelint-config-recommended": "^3.0.0",
+        "stylelint-config-recommended-scss": "^4.2.0",
         "ts-node": "~7.0.0",
         "tslint": "~5.15.0",
         "typescript": "~3.4.3"
