--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -9,8 +9,8 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
-
-
+    implementation project(':proteansoftware-capacitor-start-navigation')
+    implementation "com.squareup.okhttp3:okhttp:3.12.0"
 }
 
 
