--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,1 +1,8 @@
-{}
+{
+  "appId": "io.ionic.starter",
+  "appName": "smartemis",
+  "bundledWebRuntime": false,
+  "npmClient": "npm",
+  "webDir": "www",
+  "cordova": {}
+}
