--- a/package.json
+++ b/package.json
@@ -41,12 +41,17 @@
         "@capacitor/core": "1.5.1",
         "@capacitor/ios": "^1.5.1",
         "@ionic-native/core": "^5.0.0",
+        "@ionic-native/launch-navigator": "^5.22.0",
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
         "@ionic/angular": "^5.0.0",
+        "@proteansoftware/capacitor-start-navigation": "^1.0.0",
+        "cordova-plugin-actionsheet": "^2.3.3",
+        "cordova-plugin-dialogs": "^2.0.2",
         "core-js": "^2.5.4",
         "rxjs": "~6.5.1",
         "tslib": "^1.9.0",
+        "uk.co.workingedge.phonegap.plugin.launchnavigator": "^5.0.4",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
